--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@huggingface/inference": "^4.3.2",
+    "@huggingface/mcp-client": "^0.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,6 +37,7 @@
     "eslint-plugin-import": "^2.32.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
